--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "socket.io": "^1.4.5",
     "style": "0.0.3",
     "superagent": "^1.8.3",
-    "uglify-js": "^2.6.2"
+    "uglify-js": "^2.6.2",
+    "validator": "^5.2.0"
   },
   "engines": {
     "node": "5.6.0"
